--- a/contacto.html
+++ b/contacto.html
@@ -2,18 +2,12 @@
 <html lang="es">
   <head>
     <title>Contacto - Cafeter&iacute;a Veintiuno</title>
-    <link rel="stylesheet" href="styles.css" type="text/css" />
-    <link rel="stylesheet" href="menu.css" type="text/css" media="screen" />
-    <style>
-      #contacto {
-        text-align: center;
-      }
-
-      #contacto iframe {
-        margin: 20px auto;
-        display: block;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="styleAdapted.css"
+      type="text/css"
+      media="screen"
+    />
   </head>
   <body>
     <header>
@@ -38,7 +32,7 @@
         comida se unen para ofrecerte una experiencia &uacute;nica.
         &#161;Descubre nuestro men&uacute; y dejate inspirar&#33;
       </p>
-      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno">
+      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno" />
     </section>
 
     <section id="contacto">
@@ -84,12 +78,12 @@
 
     <footer>
       <section>
-        <h3 style="color: white;"><u>Nuestras Ubicaciones</u></h3>
+        <h3><u>Nuestras Ubicaciones</u></h3>
         <p>P&ordm; Fernando el Cat&oacute;lico 17, Zaragoza 50006</p>
         <p>C/Jose Luis Albareda 21, Zaragoza 50004</p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Contacto</u></h3>
+        <h3><u>Contacto</u></h3>
         <p>
           Instagram
           <a href="https://instagram.com/veintiunocoffee" target="_blank"
@@ -98,7 +92,7 @@
         </p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Derechos Reservados</u></h3>
+        <h3><u>Derechos Reservados</u></h3>
         <p>&copy; 2024 Veintiuno. Todos los derechos reservados.</p>
       </section>
     </footer>
