--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="es">
   <head>
     <title>Cafeteria Veintiuno</title>
-    <img src="" alt="" />
-    <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="print.css" media="print" />
+    <link
+      rel="stylesheet"
+      href="styleAdapted.css"
+      type="text/css"
+      media="screen"
+    />
+    <!-- <link rel="stylesheet" href="styles.css" type="text/css" media="screen" /> -->
     <script
       type="text/javascript"
       src="http://code.jquery.com/jquery-latest.js"
@@ -36,7 +40,7 @@
         se unen para ofrecerte una experiencia unica. &#161;Descubre nuestro
         menu y dejate inspirar&#33;
       </p>
-      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno">
+      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno" />
     </section>
 
     <section id="content">
@@ -123,12 +127,12 @@
 
     <footer>
       <section>
-        <h3 style="color: white;"><u>Nuestras Ubicaciones</u></h3>
+        <h3><u>Nuestras Ubicaciones</u></h3>
         <p>P&ordm; Fernando el Cat&oacute;lico 17, Zaragoza 50006</p>
         <p>C/Jose Luis Albareda 21, Zaragoza 50004</p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Contacto</u></h3>
+        <h3><u>Contacto</u></h3>
         <p>
           Instagram
           <a href="https://instagram.com/veintiunocoffee" target="_blank"
@@ -137,7 +141,7 @@
         </p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Derechos Reservados</u></h3>
+        <h3><u>Derechos Reservados</u></h3>
         <p>&copy; 2024 Veintiuno. Todos los derechos reservados.</p>
       </section>
     </footer>
