--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -2,25 +2,12 @@
 <html lang="es">
   <head>
     <title>Sobre Nosotros - Cafeter&iacute;a Veintiuno</title>
-    <link rel="stylesheet" href="styles.css" type="text/css" />
-    <link rel="stylesheet" href="menu.css" type="text/css" media="screen" />
-    <style>
-      article {
-        display: flex;
-        align-items: center;
-        margin-bottom: 30px;
-      }
-
-      article img {
-        max-width: 40%;
-        margin: 0 20px;
-        border-radius: 10px;
-      }
-
-      article:nth-child(even) {
-        flex-direction: row-reverse;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="styleAdapted.css"
+      type="text/css"
+      media="screen"
+    />
   </head>
   <body>
     <header>
@@ -47,7 +34,7 @@
         comida se unen para ofrecerte una experiencia &uacute;nica.
         &#161;Descubre nuestro men&uacute; y dejate inspirar&#33;
       </p>
-      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno">
+      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno" />
     </section>
 
     <section id="about-us">
@@ -75,7 +62,9 @@
       </article>
 
       <article>
-        <h3>Misi&oacute;n</h3>
+        <header>
+          <h3>Misi&oacute;n</h3>
+        </header>
         <p>
           Inspirar y conectar a las personas mediante la pasi&oacute;n por el
           caf&eacute; de especialidad, la buena comida y un ambiente que nutra
@@ -130,12 +119,12 @@
 
     <footer>
       <section>
-        <h3 style="color: white;"><u>Nuestras Ubicaciones</u></h3>
+        <h3><u>Nuestras Ubicaciones</u></h3>
         <p>P&ordm; Fernando el Cat&oacute;lico 17, Zaragoza 50006</p>
         <p>C/Jose Luis Albareda 21, Zaragoza 50004</p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Contacto</u></h3>
+        <h3><u>Contacto</u></h3>
         <p>
           Instagram
           <a href="https://instagram.com/veintiunocoffee" target="_blank"
@@ -144,7 +133,7 @@
         </p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Derechos Reservados</u></h3>
+        <h3><u>Derechos Reservados</u></h3>
         <p>&copy; 2024 Veintiuno. Todos los derechos reservados.</p>
       </section>
     </footer>
