--- a/testimonios.html
+++ b/testimonios.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testimonios de Clientes - Cafetería Veintiuno</title>
-    <link rel="stylesheet" href="styles.css" type="text/css" />
-    <link rel="stylesheet" href="menu.css" type="text/css" media="screen" />
+    <link
+      rel="stylesheet"
+      href="styleAdapted.css"
+      type="text/css"
+      media="screen"
+    />
   </head>
   <body>
     <header>
@@ -30,7 +34,7 @@
         comida se unen para ofrecerte una experiencia &uacute;nica.
         &#161;Descubre nuestro men&uacute; y dejate inspirar&#33;
       </p>
-      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno">
+      <img src="images/coffee.png" alt="Imagen destacada de Veintiuno" />
     </section>
 
     <section id="testimonios">
@@ -96,12 +100,12 @@
 
     <footer>
       <section>
-        <h3 style="color: white;"><u>Nuestras Ubicaciones</u></h3>
+        <h3><u>Nuestras Ubicaciones</u></h3>
         <p>P&ordm; Fernando el Cat&oacute;lico 17, Zaragoza 50006</p>
         <p>C/Jose Luis Albareda 21, Zaragoza 50004</p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Contacto</u></h3>
+        <h3><u>Contacto</u></h3>
         <p>
           Instagram
           <a href="https://instagram.com/veintiunocoffee" target="_blank"
@@ -110,7 +114,7 @@
         </p>
       </section>
       <section>
-        <h3 style="color: white;"><u>Derechos Reservados</u></h3>
+        <h3><u>Derechos Reservados</u></h3>
         <p>&copy; 2024 Veintiuno. Todos los derechos reservados.</p>
       </section>
     </footer>
